jilles      2005/12/05 17:40:52 UTC	(20051205-4013)
  Log:
  Don't unkline a temp akill if it has already expired.
  

  Changes:	Modified:
  +3 -1		trunk/src/node.c (File Modified) 


jilles      2005/12/05 17:40:21 UTC	(20051205-4011)
  Log:
  Rewrite and simplify cs_join() using chanacs_user_flags().
  

  Changes:	Modified:
  +62 -138	trunk/modules/chanserv/main.c (File Modified) 


jilles      2005/12/05 15:34:12 UTC	(20051205-4009)
  Log:
  Fix garbled expiry time display (0 days, 0:00:4294967261)
  on akills that are expired but not yet removed.
  

  Changes:	Modified:
  +2 -2		trunk/modules/operserv/akill.c (File Modified) 


jilles      2005/12/05 13:48:52 UTC	(20051205-4007)
  Log:
  Mention duration 0 for a perm kline.
  

  Changes:	Modified:
  +1 -1		trunk/include/phandler.h (File Modified) 


jilles      2005/12/05 13:43:45 UTC	(20051205-4005)
  Log:
  Documentation for protocol module functions.
  

  Changes:	Modified:
  +57 -0	trunk/include/phandler.h (File Modified) 


jilles      2005/12/05 11:25:39 UTC	(20051205-4003)
  Log:
  Make /cs status conform to the flags system better.
  

  Changes:	Modified:
  +8 -27	trunk/modules/chanserv/status.c (File Modified) 


jilles      2005/12/05 00:57:18 UTC	(20051205-4001)
  Log:
  Add an anope module that dumps the currently loaded
  data as a flatfile. This is the old gen_convert.c,
  improved quite a bit.
  

  Changes:	Modified:
  +298 -0	trunk/contrib/anope_convert.c (File Added) 


jilles      2005/12/04 22:58:55 UTC	(20051204-3999)
  Log:
  Add support for old ircservices password encryption as
  used by anope. This needs to be stored as
  $ircservices$<PASSWORD> where <PASSWORD> is the lowercase
  hex representation of the first 8 bytes of the encryption
  (the last 8 bytes are constant anyway).
  

  Changes:	Modified:
  +1 -1		trunk/crypto/Makefile.in (File Modified) 
  +458 -0	trunk/crypto/ircservices.c (File Added) 


jilles      2005/12/02 01:15:37 UTC	(20051202-3997)
  Log: